--- a/src/main/resources/templates/BookingForm.html
+++ b/src/main/resources/templates/BookingForm.html
@@ -45,9 +45,9 @@
           </div>
           <div class="input-box">
             <span class="details">Message</span>
-            <input type="textarea" name= "message" placeholder="Write your message>
-          </div> 
-        </div>
+            <input type="textarea" name= "message" placeholder="Write your message">
+          </div>
+          </div>
         <div class="button">
           <input type="submit" value="Book Now">
         </div>
