--- a/src/main/resources/templates/SignupForm.html
+++ b/src/main/resources/templates/SignupForm.html
@@ -21,8 +21,8 @@
             <input type="text" name= "username" placeholder="Enter your username" required>
           </div>
           <div class="input-box">
-            <span class="details">Email</span>
-            <input type="email" name= "email" placeholder="Enter your email" required>
+            <span class="details">Role</span>
+            <input type="text" name= "role" placeholder="Assign role" required>
           </div>
           <div class="input-box">
             <span class="details">Contact Number</span>
